--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.4",
     "gh-pages": "^4.0.0",
+    "phaser": "^3.55.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-moralis": "^1.4.0",
     "react-reveal": "^1.2.2",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "rsuite": "^4.9.3",
     "web-vitals": "^1.0.1"
   },
