--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.4",
+    "ethers": "^5.6.9",
     "gh-pages": "^4.0.0",
     "phaser": "^3.55.2",
     "react": "^17.0.1",
