--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "emailjs-com": "^2.6.4",
     "ethers": "^5.6.9",
     "gh-pages": "^4.0.0",
+    "moralis": "^1.8.1",
+    "npm": "^8.13.2",
     "phaser": "^3.55.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
