--- a/package.json
+++ b/package.json
@@ -9,26 +9,32 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.21.6",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.4",
     "ethers": "^5.6.9",
     "gh-pages": "^4.0.0",
+    "mdb-react-ui-kit": "^4.1.0",
     "moralis": "^1.8.1",
     "npm": "^8.13.2",
     "phaser": "^3.55.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-moralis": "^1.4.0",
     "react-reveal": "^1.2.2",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.5.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "rsuite": "^4.9.3",
+    "spinners-react": "^1.0.7",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
